[project]
name = "billing-agent"
version = "0.1.0"
description = "LangGraph billing agent with short-term memory and built-in test UI"
readme = "README.md"
authors = [
    { name = "Agent Developer", email = "developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.17.0",
    "databricks-sdk>=0.79.0",
    "psycopg[binary]>=3.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.1.9",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "litellm>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]


[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
